# serializer version: 1
# name: test_binary_sensor_structure_snapshot
  dict({
    'binary_sensor_count': 0,
    'has_binary_sensors': False,
    'magic_binary_sensor_count': 2,
  })
# ---
# name: test_coordinator_data_snapshot
  dict({
    'area_id': 'kitchen',
    'enabled_features_count': 0,
    'entity_domain_count': 0,
    'magic_entity_domain_count': 1,
    'presence_sensor_count': 0,
    'total_config_keys': 10,
  })
# ---
# name: test_entity_domain_structure_snapshot
  dict({
    'domain_counts': dict({
    }),
    'entity_domains': list([
    ]),
    'magic_domains': list([
      'binary_sensor',
    ]),
    'total_entities': 0,
  })
# ---
# name: test_light_group_structure_snapshot
  dict({
    'has_light_entities': False,
    'light_entity_count': 0,
  })
# ---
# name: test_magic_entity_structure_snapshot
  dict({
    'domain_entity_counts': dict({
      'binary_sensor': 2,
    }),
    'magic_domains': list([
      'binary_sensor',
    ]),
    'total_magic_entities': 2,
  })
# ---
# name: test_magic_sensor_structure_snapshot
  dict({
    'has_magic_sensors': False,
    'magic_sensor_count': 0,
    'sensor_count': 0,
  })
# ---
# name: test_presence_sensor_structure_snapshot
  dict({
    'has_presence_sensors': False,
    'presence_sensor_count': 0,
  })
# ---
# name: test_sensor_entity_structure_snapshot
  dict({
    'has_sensors': False,
    'sensor_count': 0,
  })
# ---
